<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigActivity"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edt_config_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="Time for each"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/file"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_config_open_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="..." />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/path"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/txtv_config_filepath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="/abc/xyz/com"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_config_start"
        android:layout_marginTop="90dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="30sp"/>
</LinearLayout>